--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <nav>
+      <% if user_signed_in? %>
+        <%= link_to "Show off", new_post_path %>
+        <%= link_to 'Snooze feed', posts_path %>
+        <%=  %>
+        Signed in as <strong><%= current_user.email %></strong>.
+        <%= link_to 'Edit login info', edit_user_registration_path %>
+        <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to 'Sign up', new_user_registration_path %>
+        <%= link_to 'Sign in', new_user_session_path %>
+      <% end %>
+
+    </nav>
     <%= yield %>
   </body>
 </html>
