--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
   <body>
     <nav>
       <% if user_signed_in? %>
-        <%= link_to "Show off", new_post_path %>
-        <%= link_to 'Snooze feed', posts_path %>
-        <%=  %>
-        Signed in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit login info', edit_user_registration_path %>
+        <%= link_to "Show off now", new_post_path %> | 
+        <%= link_to 'Snooze feed', posts_path %> | 
+        <%= link_to 'Amass empire of friends', users_path(id: current_user.id) %> |
+        <%= link_to 'Think about myself', user_path(id: current_user.id) %> |
+        Signed in as <strong><%= current_user.name %></strong>.
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
       <% else %>
         <%= link_to 'Sign up', new_user_registration_path %>
