--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,9 +12,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to "#{user.name}", user %></td>
-        <td><%= @friend_statuses[user.id] %></td>
-        <td><%= link_to "add friend", users_path(id: @user.id, friend_toggle_id: user.id) %></td>
+        <td><%= link_to "#{user.name}", user %></td><td><%= @friend_statuses[user.id] 
+        %></td><td><%= link_to "#{@button_texts[user.id]}", users_path(friend_toggle_id: user.id, method: @button_texts[user.id]) %></td>
       </tr>
     <% end %>
   </tbody>
