--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,23 +2,17 @@
 
 <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<% @posts.each do |post| %>
+  <div><%= post.user.name %> says: <%= post.body %>
+    <br>
+    <% if post.user == current_user %>
+      <%= link_to 'Edit', edit_post_path(post) %> | 
+      <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
-  </tbody>
-</table>
+  </div>
+<% end %>
+
 
 <br>
 
