--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
-
+<%= @post.body %>
+<br>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Delete', @post, method: :delete %> |
 <%= link_to 'Back', posts_path %>
