--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,20 @@
 <p id="notice"><%= notice %></p>
 <p> picture here </p>
 <h1><%= @user.name %></h1>
-<h3>I'm awesome because:</h3>
+<h3>Awesome because:</h3>
 <p><%= @user.details %></p>
 
-<% if @user == current_user %>
-    <%= link_to 'Edit profile', edit_user_path(@user) %> | 
-    <%= link_to 'Edit login info', edit_user_registration_path %> |
+<h3>Friends:</h3>
+<% @friends.each do |friend| %>
+    <p><%= friend.name %></p>
 <% end %>
-<%= link_to 'Back', users_path(id: current_user.id) %>
+<% if @user.friends?(current_user) || @user == current_user %>
+    <h3>Posts:</h3>
+    <%= render @posts %>
+<% end %>
+<p>
+    <% if @user == current_user %>
+        <%= link_to 'Edit profile', edit_user_path(@user) %> | 
+        <%= link_to 'Edit login info', edit_user_registration_path %> |
+    <% end %>
+</p>
