add thumbnails and times to posts/comments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <%= link_to "Show off now", new_post_path %> | 
         <%= link_to 'Snooze feed', posts_path %> | 
         <%= link_to 'Amass empire of friends', users_path %> |
-        <%= link_to 'Think about myself', user_path(id: current_user.id) %> |
+        <%= link_to 'Think about MYSELF', user_path(id: current_user.id) %> |
         <%= link_to "Notifications (#{@notifications})", '/notifications'  %> |
         Signed in as <strong><%= current_user.name %></strong>.
         <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
